<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/profile_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/user_name_placeholder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profileImageView"
        app:layout_constraintTop_toTopOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/handleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_handle_placeholder"
        app:layout_constraintStart_toStartOf="@id/nameTextView"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintEnd_toEndOf="@id/nameTextView" />
    <TextView
        android:id="@+id/bioTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_bio_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageView" />
    <TextView
        android:id="@+id/followersCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers_count"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioTextView"/>

    <TextView
        android:id="@+id/followersLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/followers_label"
        app:layout_constraintStart_toEndOf="@id/followersCountTextView"
        app:layout_constraintBaseline_toBaselineOf="@id/followersCountTextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>